# sniffly-codex

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  lint.sh  pyproject.toml  repo-structure.md  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
docs/: README-DEV.md  claude-logs-structure-and-processing.md  cli-reference.md  memory-and-latency-optimization.md  tests.md
sniffly/: __init__.py  __version__.py  cli.py  config.py  server.py  share.py
sniffly-site/: README.md  admin.html  admin.py  auth.py  build.py  gallery-site-server.py  index.html  local-dev-gallery-server.py  local-dev-share-server.py  package.json  share-template.html  share.html
sniffly-site/functions/: gallery-index.json.js  index.js
sniffly-site/functions/api/: shares.js
sniffly-site/functions/share/: [[id]].js
sniffly-site/static/css/: admin.css  style.css
sniffly-site/static/js/: admin.js  gallery.js  share-viewer.js
sniffly/api/: data.py  data_loader.py  messages.py
sniffly/core/: constants.py  global_aggregator.py  processor.py  stats.py
sniffly/services/: __init__.py  pricing_service.py
sniffly/static/css/: dashboard.css  date-range-picker.css  project-selector.css  share-modal.css
sniffly/static/js/: charts.js  commands-tab.js  constants.js  date-range-picker.js  dynamic-interval-chart-builder.js  export.js  jsonl-viewer.js  memory-monitor.js  message-modal.js  messages-tab.js  overview.js  pricing.js  project-detector.js  stats-cards.js  stats.js  utils.js
sniffly/templates/: dashboard.html  overview.html
sniffly/utils/: cache_warmer.py  local_cache.py  log_finder.py  logging.py  memory_cache.py  pricing.py
tests/: baseline_results.json
tests/mock-data/: pricing.json
tests/mock-data/-Users-chip-dev-ai-music/: ba79134d-b6e9-4867-af0c-6941038c9e4b.jsonl  d3ad4cdc-5657-435d-98fa-0035d53e383d.jsonl  fed8ce56-bc79-401f-a83e-af084253362f.jsonl  ff71dbed-a4f2-4284-a4fc-fe2fb90de929.jsonl
tests/sniffly/: baseline_phase2.json  test_cli.py  test_deduplication.py  test_interaction_steps.py  test_performance.py  test_processor_data_verification.py  test_processor_optimization_correctness.py  test_server.py  test_share.py
tests/sniffly-site/: test_admin.py
tests/sniffly/core/: __init__.py  test_codex_processor.py  test_global_aggregator.py  (+2 more)
(+3 files in other folders)
